--- a/.github/workflows/dependency-check-java.yml
+++ b/.github/workflows/dependency-check-java.yml
@@ -16,18 +16,39 @@ on:
         # default: 'w-backend'
 
 jobs:
-  dependency-check:
-    name: Audit Java (OWASP Dependency-Check)
+  # dependency-check:
+  #   name: Audit Java (OWASP Dependency-Check)
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #    - uses: actions/checkout@v3
+  #     with:
+  #        fetch-depth: 0
+  #      - name: Checkout code
+  #        uses: dependency-check/Dependency-Check_Action@v2
+  #        with:
+  #          project: '${{ inputs.project_name }}'
+  #          scan: './apps/${{ inputs.project_name }}'
+  #          format: 'HTML'
+  #          out: 'reports'
+
+  codeql-analysis:
+    name: Analyze (CodeQL)
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ['java']
     steps:
       - uses: actions/checkout@v3
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
         with:
-          fetch-depth: 0
-
-      - name: Checkout code
-        uses: dependency-check/Dependency-Check_Action@v2
-        with:
-          project: '${{ inputs.project_name }}'
-          scan: './apps/${{ inputs.project_name }}'
-          format: 'HTML'
-          out: 'reports'
+          languages: ${{ matrix.language }}
+      - name: Build
+        run: mvn clean install -DskipTests
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
