--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nrwl/nx-plugin": "^19.8.4",
-    "@nx/angular": "^20.6.0",
-    "@nx/devkit": "20.5.0",
+    "@nx/angular": "21.3.0",
+    "@nx/devkit": "21.3.0",
     "@prisma/client": "^6.5.0",
     "dotenv-flow": "^4.1.0",
     "dotenv-flow-cli": "^1.1.1",
@@ -56,16 +56,16 @@
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^10.0.2",
-    "@nx/eslint": "21.2.4",
-    "@nx/eslint-plugin": "20.5.0",
-    "@nx/jest": "20.5.0",
-    "@nx/js": "20.6.0",
-    "@nx/nest": "^20.5.0",
-    "@nx/node": "^20.5.0",
-    "@nx/plugin": "20.5.0",
-    "@nx/web": "20.6.0",
+    "@nx/eslint": "21.3.0",
+    "@nx/eslint-plugin": "21.3.0",
+    "@nx/jest": "21.3.0",
+    "@nx/js": "21.3.0",
+    "@nx/nest": "21.3.0",
+    "@nx/node": "21.3.0",
+    "@nx/plugin": "21.3.0",
+    "@nx/web": "21.3.0",
     "@nx/webpack": "21.3.0",
-    "@nxrocks/nx-spring-boot": "^10.2.6",
+    "@nxrocks/nx-spring-boot": "11.0.1",
     "@schematics/angular": "10.2.3",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
@@ -78,18 +78,18 @@
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^9.0.0",
     "inflection": "^3.0.2",
-    "jest": "^29.7.0",
+    "jest": "^30.0.4",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "20.5.0",
+    "nx": "21.3.0",
     "prettier": "^2.6.2",
     "prisma": "^6.5.0",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.7.2",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^8.19.0",
     "webpack-cli": "^5.1.4"
   },
