--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   - package-ecosystem: 'maven'
-    directory: '/'
+    directory: '/apps/w-backend'
     schedule:
       interval: 'weekly'
 
